--- a/changelog.html
+++ b/changelog.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
-<!-- $Id: changelog.html,v 1.17 2005/06/26 16:44:15 jact Exp $ -->
+<!-- $Id: changelog.html,v 1.18 2006/10/13 19:24:03 jact Exp $ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
@@ -13,7 +13,7 @@
 
 <meta name="author" content="Jose Antonio Chavarría" />
 
-<meta name="copyright" content="2002-2005 Jose Antonio Chavarría" />
+<meta name="copyright" content="2002-2006 Jose Antonio Chavarría" />
 
 <meta name="keywords" content="OpenClinic, open source, gpl, healthcare, php, mysql, coresis" />
 
@@ -23,9 +23,9 @@
 
 <link rel="stylesheet" type="text/css" href="./css/print.css" media="print" />
 
-<link rel="shortcut icon" type="image/png" href="./images/miniopc.png" />
+<link rel="shortcut icon" type="image/png" href="./img/miniopc.png" />
 
-<link rel="bookmark icon" type="image/png" href="./images/miniopc.png" />
+<link rel="bookmark icon" type="image/png" href="./img/miniopc.png" />
 </head>
 <body id="top">
 <div id="content">
@@ -430,14 +430,14 @@
   </ol>
 </div><!-- End #content -->
 
-<div id="left">
+<div id="menu">
   <p>
     <a href="http://openclinic.sourceforge.net" id="logo" title="OpenClinic web site">OpenClinic web site</a>
   </p>
 
   <h2>Table of contents</h2>
 
-  <ul class="linkList">
+  <ul>
     <li><a href="#legend">Legend</a></li>
 
     <li><a href="#c-06">Changes since 0.6</a></li>
@@ -452,13 +452,13 @@
 
     <li><a href="#c-01">Changes since 0.1</a></li>
   </ul>
-</div><!-- End #left -->
+</div><!-- End #menu -->
 
-<div id="right">
+<div id="extra">
   <h2>Related links</h2>
 
-  <ul class="linkList">
-    <li class="bold"><a href="./index.php">Start OpenClinic</a></li>
+  <ul>
+    <li><a href="./index.php"><strong>Start OpenClinic</strong></a></li>
 
     <li><a href="./index.html">Readme</a></li>
 
@@ -472,14 +472,12 @@
   <p>
     <a href="http://sourceforge.net" id="hosting" title="Project hosted in SourceForge.net">Project hosted in SF.net</a>
   </p>
-</div><!-- End #right -->
+</div><!-- End #extra -->
 
 <div id="footer">
   <p>Powered by OpenClinic</p>
 
-  <p>Copyright &copy; 2002-2005 <a href="mailto:CUT-THIS.jachavar&#64;gmail.com?subject=OpenClinic" accesskey="9">Jose Antonio Chavarría</a></p>
-
-  <p>under the <a href="./LICENSE">GNU General Public License</a></p>
+  <p>Copyright &copy; 2002-2006 <a href="mailto:CUT-THIS.openclinic&#64;gmail.com?subject=OpenClinic" accesskey="9">Jose Antonio Chavarría</a><br />under the <a href="./LICENSE">GNU General Public License</a></p>
 
   <p>
     <a href="http://validator.w3.org/check/referer" id="xhtml11" title="Valid XHTML 1.1">Valid XHTML 1.1</a>
