--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
-<!-- $Id: index.html,v 1.14 2006/08/17 17:43:57 jact Exp $ -->
+<!-- $Id: index.html,v 1.15 2006/10/13 19:24:39 jact Exp $ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
@@ -23,9 +23,9 @@
 
 <link rel="stylesheet" type="text/css" href="./css/print.css" media="print" />
 
-<link rel="shortcut icon" type="image/png" href="./images/miniopc.png" />
+<link rel="shortcut icon" type="image/png" href="./img/miniopc.png" />
 
-<link rel="bookmark icon" type="image/png" href="./images/miniopc.png" />
+<link rel="bookmark icon" type="image/png" href="./img/miniopc.png" />
 </head>
 <body id="top">
 <div id="content">
@@ -148,7 +148,7 @@
   <h2 id="down"><a href="#top" title="To top of the page">Download</a></h2>
 
   <p>
-    You can get the newest version at <a href="http://sourceforge.net/project/showfiles.php?group_id=70742">Sourceforge</a>
+    You can get the newest version at <a href="http://sourceforge.net/project/showfiles.php?group_id=70742">Sourceforge</a>.
   </p>
 
   <hr />
@@ -156,7 +156,7 @@
   <h2 id="devel"><a href="#top" title="To top of the page">Developers Information</a></h2>
 
   <p>
-    [jact] - Jose Antonio Chavarría &lt;<a href="mailto:CUT-THIS.jachavar&#64;gmail.com">jachavar at gmail dot com</a>&gt;
+    [jact] - Jose Antonio Chavarría &lt;<a href="mailto:CUT-THIS.openclinic&#64;gmail.com">openclinic at gmail dot com</a>&gt;
   </p>
 
   <ul>
@@ -218,14 +218,14 @@
   </p>
 </div><!-- End #content -->
 
-<div id="left">
+<div id="menu">
   <p>
     <a href="http://openclinic.sourceforge.net" id="logo" title="OpenClinic web site">OpenClinic web site</a>
   </p>
 
   <h2>Table of contents</h2>
 
-  <ul class="linkList">
+  <ul>
     <li><a href="#intro">Introduction</a></li>
 
     <li><a href="#require">Requirements</a></li>
@@ -240,13 +240,13 @@
 
     <li><a href="#bye">Farewell</a></li>
   </ul>
-</div><!-- End #left -->
+</div><!-- End #menu -->
 
-<div id="right">
+<div id="extra">
   <h2>Related links</h2>
 
-  <ul class="linkList">
-    <li class="bold"><a href="./index.php">Start OpenClinic</a></li>
+  <ul>
+    <li><a href="./index.php"><strong>Start OpenClinic</strong></a></li>
 
     <li><a href="./install.html">Install Instructions</a></li>
 
@@ -260,14 +260,12 @@
   <p>
     <a href="http://sourceforge.net" id="hosting" title="Project hosted in SourceForge.net">Project hosted in SF.net</a>
   </p>
-</div><!-- End #right -->
+</div><!-- End #extra -->
 
 <div id="footer">
   <p>Powered by OpenClinic</p>
 
-  <p>Copyright &copy; 2002-2006 <a href="mailto:CUT-THIS.jachavar&#64;gmail.com?subject=OpenClinic" accesskey="9">Jose Antonio Chavarría</a></p>
-
-  <p>under the <a href="./LICENSE">GNU General Public License</a></p>
+  <p>Copyright &copy; 2002-2006 <a href="mailto:CUT-THIS.openclinic&#64;gmail.com?subject=OpenClinic" accesskey="9">Jose Antonio Chavarría</a><br />under the <a href="./LICENSE">GNU General Public License</a></p>
 
   <p>
     <a href="http://validator.w3.org/check/referer" id="xhtml11" title="Valid XHTML 1.1">Valid XHTML 1.1</a>
